countries/src/assets/base.css
@import url(https://fonts.googleapis.com/css?family=Nunito+Sans);
/* semantic color variables for this project */

:root {
  --color-background: hsl(0, 0%, 100%);
  --color-background-secondary: hsl(0, 0%, 98%);
  --color-text: hsl(200, 15%, 8%);
  --color-dark-gray:hsl(0, 0%, 52%);

}

:root.dark-theme{
  --color-background: hsl(207, 26%, 17%) ;
  --color-background-secondary: hsl(209, 23%, 22%);
  --color-text:hsl(0, 0%, 100%);
}

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  position: relative;
  font-weight: normal;
  font-family: 'Nunito Sans',sans-serif;
}

body {
  min-height: 100vh;
  color: var(--color-text);
  background: var(--color-background);
  transition: color 0.5s, background-color 0.5s;
  line-height: 1.6;
  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  font-size: 15px;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
a {
  color: inherit; /* blue colors for links too */
  text-decoration: inherit; /* no underline */
}

svg{
  fill:var(--color-text);
}

@media screen and (min-width:375px) {
  body{
    width: 100%;
  }
  #app{
    width: 100vw;
  }
}

.mag-glass-icon path{
  fill: var(--color-text);
  width:32px;
  height:32px;
}

